new/missing nodes added.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1570,7 +1570,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Denoise.html",
-          "hash": "JbDaEwFSK8udJUaeLYtnRA=="
+          "hash": "knnQAgV5lUwFev8iV4J3Ag=="
         }
       },
       "is_incremental": false,
@@ -1619,6 +1619,30 @@
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Heal.html",
           "hash": "8lHCEGMx2bv01V20OLkIPg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Adjustment--Invert.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Adjustment--Invert.html",
+          "hash": "aXAqbxtluhEEB5HJkhuwtg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Adjustment--RGBExtractor.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Adjustment--RGBExtractor.html",
+          "hash": "mZu3oXHJQ9KSA7qs1dBp2g=="
         }
       },
       "is_incremental": false,
@@ -1739,6 +1763,30 @@
         ".html": {
           "relative_path": "reference/Nodes/Color--Mixer.html",
           "hash": "s5WIRAT6X+oPTlxDYs8gwg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Color--NormalMap.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Color--NormalMap.html",
+          "hash": "OnRoOrAlVY0TJbq/9MCPaQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Color--RGBMixer.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Color--RGBMixer.html",
+          "hash": "E4iJxsW7FZXZtHAnY6qIHw=="
         }
       },
       "is_incremental": false,
@@ -2010,11 +2058,35 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Erosion--Snow.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Erosion--Snow.html",
+          "hash": "ofuUvKS0EWj/Bx0gBiqnjg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "reference/Nodes/Erosion--Stratify.md",
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Stratify.html",
           "hash": "KqaPsaA5HRFlG3E1KsZlKA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Erosion--ThermalErosion.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Erosion--ThermalErosion.html",
+          "hash": "Xy/dXZS/XWf5ppC9pQPGbg=="
         }
       },
       "is_incremental": false,
@@ -2202,6 +2274,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Output--Mesher.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Output--Mesher.html",
+          "hash": "yOBy/CcojfLqWvRjwRcJyQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "reference/Nodes/Output--Output.md",
       "output": {
         ".html": {
@@ -2346,6 +2430,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Primitive--Resource.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Primitive--Resource.html",
+          "hash": "gMKN5JQEuQkDEH9KAqW2pQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "reference/Nodes/Primitive--SlopeNoise.md",
       "output": {
         ".html": {
@@ -2482,7 +2578,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/toc.html",
-          "hash": "VXMK+rjZUgEYF5E/7+ldMA=="
+          "hash": "7zceUpHAIwTWaByFyjqbvw=="
         }
       },
       "is_incremental": false,
@@ -2508,14 +2604,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
