--- a/reference/toc.yml
+++ b/reference/toc.yml
@@ -2,100 +2,106 @@
   items:
   - name: Primitives
     items:
-    - name: Constant
-      href: Nodes/Primitive--Constant.md
-    - name: Draw
-      href: Nodes/Primitive--Draw.md
-    - name: Dunes
-      href: Nodes/Primitive--Dunes.md
-    - name: Fault
-      href: Nodes/Primitive--Fault.md
-    - name: File
-      href: Nodes/Primitive--File.md
-    - name: Gradient
-      href: Nodes/Primitive--Gradient.md
-    - name: Igneous
-      href: Nodes/Primitive--Igneous.md
-    - name: LineNoise
-      href: Nodes/Primitive--LineNoise.md
-    - name: Mountain
-      href: Nodes/Primitive--Mountain.md
-    - name: Perlin
-      href: Nodes/Primitive--Perlin.md
-    - name: Plates
-      href: Nodes/Primitive--Plates.md
-    - name: SlopeNoise
-      href: Nodes/Primitive--SlopeNoise.md
-    - name: Vector
-      href: Nodes/Primitive--Vector.md
-    - name: Voronoi
-      href: Nodes/Primitive--Voronoi.md
-    - name: Voronoi+
-      href: Nodes/Primitive--Voronoi+.md
+      - name: Constant
+        href: Nodes/Primitive--Constant.md
+      - name: Draw
+        href: Nodes/Primitive--Draw.md
+      - name: Dunes
+        href: Nodes/Primitive--Dunes.md
+      - name: Fault
+        href: Nodes/Primitive--Fault.md
+      - name: File
+        href: Nodes/Primitive--File.md
+      - name: Gradient
+        href: Nodes/Primitive--Gradient.md
+      - name: Igneous
+        href: Nodes/Primitive--Igneous.md
+      - name: LineNoise
+        href: Nodes/Primitive--LineNoise.md
+      - name: Mountain
+        href: Nodes/Primitive--Mountain.md
+      - name: Perlin
+        href: Nodes/Primitive--Perlin.md
+      - name: Plates
+        href: Nodes/Primitive--Plates.md
+      - name: Resource
+        href: Nodes/Primitive--Resource.md
+      - name: SlopeNoise
+        href: Nodes/Primitive--SlopeNoise.md
+      - name: Vector
+        href: Nodes/Primitive--Vector.md
+      - name: Voronoi
+        href: Nodes/Primitive--Voronoi.md
+      - name: Voronoi+
+        href: Nodes/Primitive--Voronoi+.md
   - name: Adjustments
     items:
-     - name: AutoLevel
-       href: Nodes/Adjustment--AutoLevel.md
-     - name: BiasGain
-       href: Nodes/Adjustment--BiasGain.md
-     - name: Blur
-       href: Nodes/Adjustment--Blur.md
-     - name: Clamp
-       href: Nodes/Adjustment--Clamp.md
-     - name: Combine
-       href: Nodes/Adjustment--Combine.md
-     - name: Denoise
-       href: Nodes/Adjustment--Denoise.md
-     - name: Displace
-       href: Nodes/Adjustment--Displace.md
-     - name: Flip
-       href: Nodes/Adjustment--Flip.md
-     - name: Gamma
-       href: Nodes/Adjustment--Gamma.md
-     - name: Heal
-       href: Nodes/Adjustment--Heal.md
-     - name: Sharpen
-       href: Nodes/Adjustment--Sharpen.md
-     - name: Sine
-       href: Nodes/Adjustment--Sine.md
-     - name: Threshold
-       href: Nodes/Adjustment--Threshold.md
-     - name: Transform
-       href: Nodes/Adjustment--Transform.md
-     - name: Zero Borders
-       href: Nodes/Adjustment--Zero Borders.md
+      - name: AutoLevel
+        href: Nodes/Adjustment--AutoLevel.md
+      - name: BiasGain
+        href: Nodes/Adjustment--BiasGain.md
+      - name: Blur
+        href: Nodes/Adjustment--Blur.md
+      - name: Clamp
+        href: Nodes/Adjustment--Clamp.md
+      - name: Combine
+        href: Nodes/Adjustment--Combine.md
+      - name: Denoise
+        href: Nodes/Adjustment--Denoise.md
+      - name: Displace
+        href: Nodes/Adjustment--Displace.md
+      - name: Flip
+        href: Nodes/Adjustment--Flip.md
+      - name: Gamma
+        href: Nodes/Adjustment--Gamma.md
+      - name: Heal
+        href: Nodes/Adjustment--Heal.md
+      - name: Invert
+        href: Nodes/Adjustment--Invert.md
+      - name: RGB Extractor
+        href: Nodes/Adjustment--RGBExtractor.md
+      - name: Sharpen
+        href: Nodes/Adjustment--Sharpen.md
+      - name: Sine
+        href: Nodes/Adjustment--Sine.md
+      - name: Threshold
+        href: Nodes/Adjustment--Threshold.md
+      - name: Transform
+        href: Nodes/Adjustment--Transform.md
+      - name: Zero Borders
+        href: Nodes/Adjustment--Zero Borders.md
   - name: Filters
     items:
-    - name: Aperture
-      href: Nodes/Filter--Aperture.md
-    - name: Apex
-      href: Nodes/Filter--Apex.md
-    - name: Bomber
-      href: Nodes/Filter--Bomber.md
-    - name: Cells
-      href: Nodes/Filter--Cells.md
-    - name: Distribution
-      href: Nodes/Filter--Distribution.md
-    - name: Noise
-      href: Nodes/Filter--Noise.md
-    - name: Origami
-      href: Nodes/Filter--Origami.md
-    - name: Polar
-      href: Nodes/Filter--Polar.md
-    - name: Recurve
-      href: Nodes/Filter--Recurve.md
-    - name: Repulse
-      href: Nodes/Filter--Repulse.md
-    - name: Rocks
-      href: Nodes/Filter--Rocks.md
-    - name: Subterrace
-      href: Nodes/Filter--Subterrace.md
-    - name: Swirl
-      href: Nodes/Filter--Swirl.md
-    - name: Terrace
-      href: Nodes/Filter--Terrace.md
-    - name: Whorl
-      href: Nodes/Filter--Whorl.md
+      - name: Aperture
+        href: Nodes/Filter--Aperture.md
+      - name: Apex
+        href: Nodes/Filter--Apex.md
+      - name: Bomber
+        href: Nodes/Filter--Bomber.md
+      - name: Cells
+        href: Nodes/Filter--Cells.md
+      - name: Distribution
+        href: Nodes/Filter--Distribution.md
+      - name: Noise
+        href: Nodes/Filter--Noise.md
+      - name: Origami
+        href: Nodes/Filter--Origami.md
+      - name: Polar
+        href: Nodes/Filter--Polar.md
+      - name: Recurve
+        href: Nodes/Filter--Recurve.md
+      - name: Repulse
+        href: Nodes/Filter--Repulse.md
+      - name: Rocks
+        href: Nodes/Filter--Rocks.md
+      - name: Subterrace
+        href: Nodes/Filter--Subterrace.md
+      - name: Swirl
+        href: Nodes/Filter--Swirl.md
+      - name: Terrace
+        href: Nodes/Filter--Terrace.md
+      - name: Whorl
+        href: Nodes/Filter--Whorl.md
   - name: Erosion
     items:
       - name: Alluvium
@@ -126,8 +132,12 @@
         href: Nodes/Erosion--MicroErosion.md
       - name: Sediment
         href: Nodes/Erosion--Sediment.md
+      - name: Snow
+        href: Nodes/Erosion--Snow.md
       - name: Stratify
         href: Nodes/Erosion--Stratify.md
+      - name: Thermal Erosion
+        href: Nodes/Erosion--ThermalErosion.md
   - name: Data Maps
     items:
       - name: Flow
@@ -142,37 +152,43 @@
         href: Nodes/DataMap--Velocity.md
   - name: Selectors
     items:
-    - name: Angle
-      href: Nodes/Selector--Angle.md
-    - name: Curvature
-      href: Nodes/Selector--Curvature.md
-    - name: Height
-      href: Nodes/Selector--Height.md
-    - name: Mask
-      href: Nodes/Selector--Mask.md
-    - name: Slope
-      href: Nodes/Selector--Slope.md
+      - name: Angle
+        href: Nodes/Selector--Angle.md
+      - name: Curvature
+        href: Nodes/Selector--Curvature.md
+      - name: Height
+        href: Nodes/Selector--Height.md
+      - name: Mask
+        href: Nodes/Selector--Mask.md
+      - name: Slope
+        href: Nodes/Selector--Slope.md
   - name: Color
     items:
-    - name: Biome
-      href: Nodes/Color--Biome.md
-    - name: BrightnessContrast
-      href: Nodes/Color--BrightnessContrast.md
-    - name: CLUTer
-      href: Nodes/Color--CLUTer.md
-    - name: HSL
-      href: Nodes/Color--HSL.md
-    - name: Mixer
-      href: Nodes/Color--Mixer.md
-    - name: SatMaps
-      href: Nodes/Color--SatMaps.md
-    - name: Synth
-      href: Nodes/Color--Synth.md
+      - name: Biome
+        href: Nodes/Color--Biome.md
+      - name: BrightnessContrast
+        href: Nodes/Color--BrightnessContrast.md
+      - name: CLUTer
+        href: Nodes/Color--CLUTer.md
+      - name: HSL
+        href: Nodes/Color--HSL.md
+      - name: Mixer
+        href: Nodes/Color--Mixer.md
+      - name: Normal Map
+        href: Nodes/Color--NormalMap.md
+      - name: RGB Mixer
+        href: Nodes/Color--RGBMixer.md
+      - name: SatMaps
+        href: Nodes/Color--SatMaps.md
+      - name: Synth
+        href: Nodes/Color--Synth.md
   - name: Outputs
     items:
-    - name: Output
-      href: Nodes/Output--Output.md
+      - name: Mesher
+        href: Nodes/Output--Mesher.md
+      - name: Output
+        href: Nodes/Output--Output.md
 - name: Sculpting Tools
   items:
-    - name: LandBreaker
-      href: Sculpt Tools/LandBreaker.md
+      - name: LandBreaker
+        href: Sculpt Tools/LandBreaker.md
