--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/Users/parve/Documents/GitHub/Gaea-Docs",
+  "source_base_path": "Z:/Git/Gaea/Gaea-Docs",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -198,7 +198,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/Installing Gaea.html",
-          "hash": "TShmX67yGmiSZjRPTahliA=="
+          "hash": "xvtxTq22CinsysFteVNYpg=="
         }
       },
       "is_incremental": false,
@@ -2604,14 +2604,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
