--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -90,7 +90,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/Getting around.html",
-          "hash": "gOEWsIZgpTW40HE/W2j4AQ=="
+          "hash": "3HD5LSZAjs6pvv0WJDhx1Q=="
         }
       },
       "is_incremental": false,
@@ -174,7 +174,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/interface/Startup.html",
-          "hash": "Y4/6o5xl6dyk/A7fGGUEhg=="
+          "hash": "68lBClXX3h2eqGM7ey5/Qw=="
         }
       },
       "is_incremental": false,
@@ -210,7 +210,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/toc.html",
-          "hash": "fWHNVG/5/CpbsIhGoT82pw=="
+          "hash": "k4H+m8qPRMbFS5ZxjC/ASQ=="
         }
       },
       "is_incremental": false,
@@ -234,7 +234,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/usage/Building.html",
-          "hash": "1g7IUAld7iCMKUfpcpts5g=="
+          "hash": "ecKU1WFwjPJM48Rst9gLqA=="
         }
       },
       "is_incremental": false,
@@ -342,7 +342,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/workflows/Graph.html",
-          "hash": "NaY8gVeo2zLLrT4N0CdNKQ=="
+          "hash": "wmmN8WbScPgBFJsothAl4w=="
         }
       },
       "is_incremental": false,
@@ -3663,6 +3663,61 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "images/ui/Build-Batch.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Build-Batch.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/ui/Build-Manager.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Build-Manager.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/ui/Build-Mark.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Build-Mark.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/ui/Build-Marked.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Build-Marked.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/ui/Build-Progress.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Build-Progress.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "images/ui/Graph-All.jpg",
       "output": {
         "resource": {
@@ -3795,6 +3850,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "images/ui/Layers-Full.jpg",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Layers-Full.jpg"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "images/ui/Map-2D.png",
       "output": {
         "resource": {
@@ -3898,6 +3964,17 @@
       "output": {
         "resource": {
           "relative_path": "images/ui/Startup.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/ui/Usage-Portals.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/ui/Usage-Portals.png"
         }
       },
       "is_incremental": false,
@@ -4521,7 +4598,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--BrightnessContrast.html",
-          "hash": "u4Mzezt0wewRHWu77pijlQ=="
+          "hash": "lWxmG7Lc3xGbObskeR9oSg=="
         }
       },
       "is_incremental": false,
@@ -4533,7 +4610,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--CLUTer.html",
-          "hash": "2HGvxrRas6mKKnsh8+KKeQ=="
+          "hash": "3K3Z249grWOjt5i2L8ntxw=="
         }
       },
       "is_incremental": false,
@@ -4545,7 +4622,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--HSL.html",
-          "hash": "XyY6akuy3g6VQq4ApOkR0Q=="
+          "hash": "PPvgkHsFv5U2rTXc35aaOw=="
         }
       },
       "is_incremental": false,
@@ -4593,7 +4670,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--SatMaps.html",
-          "hash": "1MiKDPsdTySQihBnc3/xSw=="
+          "hash": "b6/u3lIJRUQGIUOftS/9Gw=="
         }
       },
       "is_incremental": false,
@@ -4605,7 +4682,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--Synth.html",
-          "hash": "fKg9nj6XvdQ6iaREflnPMg=="
+          "hash": "CFwmlF/PwX7BZGh2ICjUeA=="
         }
       },
       "is_incremental": false,
@@ -5387,14 +5464,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
