--- a/documentation/toc.yml
+++ b/documentation/toc.yml
@@ -7,6 +7,8 @@
   - name: Getting around
     href: Getting around.md
     items:
+      - name: Startup Screen
+        href: interface/Startup.md
       - name: Node Properties
         href: interface/Properties.md
       - name: Toolbox
