--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -210,7 +210,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/toc.html",
-          "hash": "k4H+m8qPRMbFS5ZxjC/ASQ=="
+          "hash": "+rLNnOv2TG/BxoqoDg3FYg=="
         }
       },
       "is_incremental": false,
@@ -230,11 +230,47 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "documentation/usage/Build-Swarm.md",
+      "output": {
+        ".html": {
+          "relative_path": "documentation/usage/Build-Swarm.html",
+          "hash": "X/bWblRcXvsEpW1qFArZnQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "documentation/usage/Building.md",
       "output": {
         ".html": {
           "relative_path": "documentation/usage/Building.html",
-          "hash": "NGkE2sN2QUHRcUTaToA8IA=="
+          "hash": "2FGi7TI4pkJe0F55f4bfHQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "documentation/usage/Color-Biome.md",
+      "output": {
+        ".html": {
+          "relative_path": "documentation/usage/Color-Biome.html",
+          "hash": "SjEQeor+kq4OUMFj5Xzr4A=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "documentation/usage/Color-DataMaps.md",
+      "output": {
+        ".html": {
+          "relative_path": "documentation/usage/Color-DataMaps.html",
+          "hash": "sOwvQJFps3i0jjkMcJasmg=="
         }
       },
       "is_incremental": false,
@@ -246,7 +282,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/usage/Color-Production.html",
-          "hash": "NLGbG3kc+cqxj8YeSZSQYA=="
+          "hash": "jcW4bX7zENC3MlHTuttIuQ=="
         }
       },
       "is_incremental": false,
@@ -258,7 +294,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/usage/Data-Maps.html",
-          "hash": "LBRX3bsQqxJqYZ4tJ4+BwA=="
+          "hash": "Gyr8v+PurwDHbCcjiq14sQ=="
         }
       },
       "is_incremental": false,
@@ -271,6 +307,18 @@
         ".html": {
           "relative_path": "documentation/usage/Exporting.html",
           "hash": "SVrKEKYnbyWH4yROSfwUrw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "documentation/usage/Import-Export.md",
+      "output": {
+        ".html": {
+          "relative_path": "documentation/usage/Import-Export.html",
+          "hash": "aXTqdnOjWdAW27RxALEj+w=="
         }
       },
       "is_incremental": false,
@@ -5480,13 +5528,13 @@
           "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ConceptualDocumentProcessor": {
-          "can_incremental": true,
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ConceptualDocumentProcessor": {
+          "can_incremental": true,
           "incrementalPhase": "build"
         }
       }
