--- a/changelog/toc.yml
+++ b/changelog/toc.yml
@@ -1,3 +1,57 @@
 - name: Changelog
   href: index.md
   items:
+    - name: 1.0.12.7230
+      href: 1_0_12_7230.md
+    - name: 1.0.12.7094
+      href: 1_0_12_7094.md
+    - name: 1.0.11.6770
+      href: 1_0_11_6770.md
+    - name: 1.0.11.6302
+      href: 1_0_11_6302.md
+    - name: 1.0.11.6299
+      href: 1_0_11_6299.md
+    - name: 1.0.11.6223
+      href: 1_0_11_6223.md
+    - name: 1.0.11.6220
+      href: 1_0_11_6220.md
+    - name: 1.0.10.6003
+      href: 1_0_10_6003.md
+    - name: 1.0.10.6002
+      href: 1_0_10_6002.md
+    - name: 1.0.9.6001
+      href: 1_0_9_6001.md
+    - name: 1.0.9.6000
+      href: 1_0_9_6000.md
+    - name: 1.0.9.5511
+      href: 1_0_9_5511.md
+    - name: 1.0.8.5339
+      href: 1_0_8_5339.md
+    - name: 1.0.8.5443
+      href: 1_0_8_5443.md
+    - name: 1.0.8.5000
+      href: 1_0_8_5000.md
+    - name: 1.0.8.4776
+      href: 1_0_8_4776.md
+    - name: 1.0.8.4281
+      href: 1_0_8_4281.md
+    - name: 1.0.6.4192
+      href: 1_0_6_4192.md
+    - name: 1.0.6.4108
+      href: 1_0_6_4108.md
+    - name: 1.0.5.3256
+      href: 1_0_5_3256.md
+    - name: 1.0.0.2832
+      href: 1_0_0_2832.md
+    - name: 1.0.4.2480
+      href: 1_0_4_2480.md
+    - name: 1.0.4.2618
+      href: 1_0_4_2618.md
+    - name: 1.0.4.2281
+      href: 1_0_4_2281.md
+    - name: 1.0.3.1912
+      href: 1_0_3_1912.md
+    - name: 1.0.3.1800
+      href: 1_0_3_1800.md
+    - name: 1.0.2.1259
+      href: 1_0_2_1259.md
