--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -73,6 +73,330 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_0_2832.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_0_2832.html",
+          "hash": "b0Iuv6sS/NTmBy1yTx1tFw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_10_6002.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_10_6002.html",
+          "hash": "UUVnSpCwI4U/sn16GSKB3Q=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_10_6003.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_10_6003.html",
+          "hash": "ek4Cz3xLQHW7GQyaGXcRJg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_11_6220.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_11_6220.html",
+          "hash": "9u+u+Uqx6/Lomc0slOg0Fw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_11_6223.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_11_6223.html",
+          "hash": "gGTcVnXFc6FdT2E1voPpkg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_11_6299.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_11_6299.html",
+          "hash": "vYL65yQzYKh/WLFTkPrksw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_11_6302.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_11_6302.html",
+          "hash": "I5+VOoOKnNWI8PYteFjCZQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_11_6770.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_11_6770.html",
+          "hash": "lSd7dgBclC5o7EQRELusgA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_12_7094.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_12_7094.html",
+          "hash": "et2wNAlw+knCJyTb8+4Jlg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_12_7230.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_12_7230.html",
+          "hash": "zhtklDKkbGBfKXL/FEGKqg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_2_1259.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_2_1259.html",
+          "hash": "rJvayWfwbJBk1jpVa8NgVQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_3_1800.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_3_1800.html",
+          "hash": "wBh3+j9puRTQeZUi7VJ5kA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_3_1912.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_3_1912.html",
+          "hash": "+tIADiA3Ybk0sM+VSvrdEA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_4_2281.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_4_2281.html",
+          "hash": "UP8x/LEGEl3P9lt0W2J0UQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_4_2480.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_4_2480.html",
+          "hash": "yB+Z3Wc2nbZPZ9Xf1hz/Gg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_4_2618.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_4_2618.html",
+          "hash": "S1Qe8A6/aLt+Hi28OcCVBQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_5_3256.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_5_3256.html",
+          "hash": "ldpR8+HEWotpgK4UT9BheA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_6_4108.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_6_4108.html",
+          "hash": "7F72REZhN1XjwrhjD5A0vA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_6_4192.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_6_4192.html",
+          "hash": "DS3484uXKxMCTMFmabsK+w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_8_4281.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_8_4281.html",
+          "hash": "cVycYmKQmnWg6sfcf2mCdA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_8_4776.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_8_4776.html",
+          "hash": "dOoY6VF1aLKRvFRzcYUe7g=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_8_5000.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_8_5000.html",
+          "hash": "TI+UD5M8p41c1wY5BQYmww=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_8_5339.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_8_5339.html",
+          "hash": "5ElAMDmMZNOnxqVHbDcLTQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_8_5443.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_8_5443.html",
+          "hash": "dLds+cHJGj+igQ7cA8yp/w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_9_5511.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_9_5511.html",
+          "hash": "nryAM/MwSDI1jUkhQzOxyg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_9_6000.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_9_6000.html",
+          "hash": "iqvhvMBQuynauQg1pAK9LA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "changelog/1_0_9_6001.md",
+      "output": {
+        ".html": {
+          "relative_path": "changelog/1_0_9_6001.html",
+          "hash": "X33E08ws4Ec5suG/sPVQ2A=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "changelog/data.json",
       "output": {
@@ -101,7 +425,7 @@
       "output": {
         ".html": {
           "relative_path": "changelog/toc.html",
-          "hash": "3KDh6oMmBWCyh3gbUtlsIg=="
+          "hash": "D6WHvfNHlFXzY4tQULTJJw=="
         }
       },
       "is_incremental": false,
