--- a/reference/toc.yml
+++ b/reference/toc.yml
@@ -186,5 +186,31 @@
         href: Nodes/Output--Output.md
 - name: Sculpting Tools
   items:
+      - name: Basic
+        href: Sculpt Tools/Basic.md
+      - name: Carver I
+        href: Sculpt Tools/Carver I.md
+      - name: Carver II
+        href: Sculpt Tools/Carver II.md
+      - name: Cutter
+        href: Sculpt Tools/Cutter.md
+      - name: FlowLines
+        href: Sculpt Tools/FlowLines.md
+      - name: Gullies
+        href: Sculpt Tools/Gullies.md
       - name: LandBreaker
         href: Sculpt Tools/LandBreaker.md
+      - name: Pockmarks
+        href: Sculpt Tools/Pockmarks.md
+      - name: Rough Flow
+        href: Sculpt Tools/Rough Flow.md
+      - name: Roughness
+        href: Sculpt Tools/Roughness.md
+      - name: Scratch
+        href: Sculpt Tools/Scratch.md
+      - name: Soil
+        href: Sculpt Tools/Sculpt--Soil.md
+      - name: Wide Flow I
+        href: Sculpt Tools/Wide Flow I.md
+      - name: Wide Flow II
+        href: Sculpt Tools/Wide Flow II.md
