--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -334,12 +334,12 @@ references:
 - uid: Resource
   name: Resource
   href: reference/Nodes/Primitive--Resource.html
-- uid: RGB Extractor
-  name: RGB Extractor
-  href: reference/Nodes/Adjustment--RGBExtractor.html
 - uid: RGB Mixer
   name: RGB Mixer
   href: reference/Nodes/Color--RGBMixer.html
+- uid: RGBSplit
+  name: RGBSplit
+  href: reference/Nodes/Color--RGBSplit.html
 - uid: Ridge
   name: Ridge
   href: quickstarts/Ridge.html
